# MlpNetwork

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Digit.cpp  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp
files/parameters/: w1
